samples/_failures_safe/1761245457_7271e9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2ac9752d.c: In function ‘main’:
./samples/SAFE/__tmp_2ac9752d.c:138:23: error: expected ‘)’ at end of input
  138 |         if (a.rows > 3
      |            ~          ^
      |                       )
./samples/SAFE/__tmp_2ac9752d.c:138:9: error: expected declaration or statement at end of input
  138 |         if (a.rows > 3
      |         ^~
./samples/SAFE/__tmp_2ac9752d.c:138:9: error: expected declaration or statement at end of input
